test/schemas/invalid_parser/primitive_dynamic.blink
Foo = u32
Bar ->
    Foo* first
